# armourmail

./: .env.example  .gitignore  Dockerfile  GUARD.md  Procfile  README.md  ROADMAP.md  alembic.ini  index.js  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
config/: agents.json
docs/: ARCHITECTURE.md  CONCEPT.md  DEPLOYMENT.md  INBOUND_PARSE.md  RESEARCH.md  SPRINT.md  sendgrid-inbound-parse.md
src/armourmail/: __init__.py  api.py  db.py  detector.py  models.py
src/armourmail/static/: style.css
src/armourmail/templates/: dashboard.html
test/: mock_inbound.sh  simulate_inbound.js
tests/: test_detector.py
