[project]
name = "armourmail"
version = "0.1.0"
description = "Email security for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Negative Zero", email = "hello@negativezeroinc.com"}
]
keywords = ["ai", "security", "email", "prompt-injection", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Communications :: Email",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "regex>=2023.12.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "supabase>=2.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/neg-0/armourmail"
Repository = "https://github.com/neg-0/armourmail"
Documentation = "https://github.com/neg-0/armourmail#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/armourmail"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
